--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,9 @@
 *:after,
 *:before {
   box-sizing: border-box;
+  position: relative;
+  width: 100%;
+  scroll-margin-left: ;
 }
 html {
   font-size: 62.5%;
